<p> under h1 fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -27,7 +27,8 @@ main {
         }
 
         p {
-            color: $dark-gray;
+            // color: $dark-gray;
+            color: #595959;
         }
     }
 
